[package]
name = "pogo-data"
version = "0.0.1"
edition = "2021"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Parser for Pokemon Go game master file"
readme = "README.md"
license = "MIT"
#homepage = "https://github.com/intgr/..."
#repository = "https://github.com/intgr/..."
#keywords = []
#categories = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
embed-data = []
fields-useless = []

[dependencies]
derivative = "2.2.0"
serde_json = "1.0.88"
serde = { version = "1.0", features = ["derive"] }
